proj/Compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compiler.java */
import java.util.*;

public class Compiler/*@bgen(jjtree)*/implements CompilerTreeConstants, CompilerConstants {/*@bgen(jjtree)*/
  protected static JJTCompilerState jjtree = new JJTCompilerState();public static HashMap<String, Integer> symbol_table = new HashMap<String, Integer>();

    public static void main(String args[]) throws ParseException {
        System.out.println("Parser for Mini Java grammar");
        System.out.println("Write your shitty code:");
        Compiler comp = new Compiler(System.in);
        SimpleNode root = comp.Program(); // returns reference to root node

        root.dump(""); // prints the tree on the screen

        //System.out.println("Expression value: "+myCalc.eval(root));
    }

  static final public SimpleNode Program() throws ParseException {
                       /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Start();
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Start() throws ParseException {
                /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Imports();
      ClassDeclaration();
                                   SimpleNode jjtn001 = new SimpleNode(JJTFILE);
                                   boolean jjtc001 = true;
                                   jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(0);
      } finally {
                                   if (jjtc001) {
                                     jjtree.closeNodeScope(jjtn001,  2);
                                   }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Imports() throws ParseException {
                  /*@bgen(jjtree) Imports */
  SimpleNode jjtn000 = new SimpleNode(JJTIMPORTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        ImportDeclaration();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ImportDeclaration() throws ParseException {
                            /*@bgen(jjtree) ImportDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTIMPORTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      if (jj_2_2(2)) {
        jj_consume_token(STATIC);
      } else {
        ;
      }
      jj_consume_token(IDENTIFIER);
      if (jj_2_12(2)) {
        jj_consume_token(30);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(31);
        if (jj_2_8(2)) {
          if (jj_2_3(2)) {
            Type();
          } else if (jj_2_4(2)) {
            jj_consume_token(VOID);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          label_2:
          while (true) {
            if (jj_2_5(2)) {
              ;
            } else {
              break label_2;
            }
            jj_consume_token(32);
            if (jj_2_6(2)) {
              Type();
            } else if (jj_2_7(2)) {
              jj_consume_token(VOID);
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        } else {
          ;
        }
        jj_consume_token(33);
        if (jj_2_11(2)) {
          if (jj_2_9(2)) {
            Type();
          } else if (jj_2_10(2)) {
            jj_consume_token(VOID);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(34);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ClassDeclaration() throws ParseException {
                           /*@bgen(jjtree) ClassDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASSDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      jj_consume_token(IDENTIFIER);
      if (jj_2_13(2)) {
        jj_consume_token(EXTENDS);
        jj_consume_token(IDENTIFIER);
      } else {
        ;
      }
      jj_consume_token(35);
      label_3:
      while (true) {
        if (jj_2_14(2)) {
          ;
        } else {
          break label_3;
        }
        VarDeclaration();
      }
      label_4:
      while (true) {
        if (jj_2_15(2)) {
          ;
        } else {
          break label_4;
        }
        MethodDeclaration();
      }
      jj_consume_token(36);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarDeclaration() throws ParseException {
                         /*@bgen(jjtree) VarDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      jj_consume_token(IDENTIFIER);
      jj_consume_token(34);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {
                            /*@bgen(jjtree) MethodDeclaration */
  SimpleNode jjtn000 = new SimpleNode(JJTMETHODDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_22(2)) {
        jj_consume_token(PUBLIC);
        Type();
        jj_consume_token(IDENTIFIER);
        jj_consume_token(31);
        if (jj_2_17(2)) {
          Type();
          jj_consume_token(IDENTIFIER);
          label_5:
          while (true) {
            if (jj_2_16(2)) {
              ;
            } else {
              break label_5;
            }
            jj_consume_token(32);
            Type();
            jj_consume_token(IDENTIFIER);
          }
        } else {
          ;
        }
        jj_consume_token(33);
        jj_consume_token(35);
        label_6:
        while (true) {
          if (jj_2_18(2)) {
            ;
          } else {
            break label_6;
          }
          VarDeclaration();
        }
        label_7:
        while (true) {
          if (jj_2_19(2)) {
            ;
          } else {
            break label_7;
          }
          Statement();
        }
        jj_consume_token(RETURN);
        Expression();
        jj_consume_token(34);
        jj_consume_token(36);
      } else if (jj_2_23(2)) {
        jj_consume_token(PUBLIC);
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(31);
        jj_consume_token(STRING);
        jj_consume_token(37);
        jj_consume_token(38);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(33);
        jj_consume_token(35);
        label_8:
        while (true) {
          if (jj_2_20(2)) {
            ;
          } else {
            break label_8;
          }
          VarDeclaration();
        }
        label_9:
        while (true) {
          if (jj_2_21(2)) {
            ;
          } else {
            break label_9;
          }
          Statement();
        }
        jj_consume_token(36);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Type() throws ParseException {
    if (jj_2_24(2)) {
      jj_consume_token(INT);
      jj_consume_token(37);
      jj_consume_token(38);
    } else if (jj_2_25(2)) {
      jj_consume_token(BOOLEAN);
    } else if (jj_2_26(2)) {
      jj_consume_token(INT);
    } else if (jj_2_27(2)) {
      jj_consume_token(IDENTIFIER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Statement() throws ParseException {
                    /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_29(2)) {
        jj_consume_token(35);
        label_10:
        while (true) {
          if (jj_2_28(2)) {
            ;
          } else {
            break label_10;
          }
          Statement();
        }
        jj_consume_token(36);
      } else if (jj_2_30(2)) {
        jj_consume_token(IF);
        jj_consume_token(31);
        Expression();
        jj_consume_token(33);
                                  SimpleNode jjtn001 = new SimpleNode(JJTIF);
                                  boolean jjtc001 = true;
                                  jjtree.openNodeScope(jjtn001);
        try {
          Statement();
        } catch (Throwable jjte001) {
                                  if (jjtc001) {
                                    jjtree.clearNodeScope(jjtn001);
                                    jjtc001 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte001 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte001;}
                                  }
                                  if (jjte001 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte001;}
                                  }
                                  {if (true) throw (Error)jjte001;}
        } finally {
                                  if (jjtc001) {
                                    jjtree.closeNodeScope(jjtn001,  2);
                                  }
        }
        jj_consume_token(ELSE);
                                                            SimpleNode jjtn002 = new SimpleNode(JJTELSE);
                                                            boolean jjtc002 = true;
                                                            jjtree.openNodeScope(jjtn002);
        try {
          Statement();
        } catch (Throwable jjte002) {
                                                            if (jjtc002) {
                                                              jjtree.clearNodeScope(jjtn002);
                                                              jjtc002 = false;
                                                            } else {
                                                              jjtree.popNode();
                                                            }
                                                            if (jjte002 instanceof RuntimeException) {
                                                              {if (true) throw (RuntimeException)jjte002;}
                                                            }
                                                            if (jjte002 instanceof ParseException) {
                                                              {if (true) throw (ParseException)jjte002;}
                                                            }
                                                            {if (true) throw (Error)jjte002;}
        } finally {
                                                            if (jjtc002) {
                                                              jjtree.closeNodeScope(jjtn002,  1);
                                                            }
        }
      } else if (jj_2_31(2)) {
        jj_consume_token(WHILE);
        jj_consume_token(31);
        Expression();
        jj_consume_token(33);
                                    SimpleNode jjtn003 = new SimpleNode(JJTWHILE);
                                    boolean jjtc003 = true;
                                    jjtree.openNodeScope(jjtn003);
        try {
          Statement();
        } catch (Throwable jjte003) {
                                    if (jjtc003) {
                                      jjtree.clearNodeScope(jjtn003);
                                      jjtc003 = false;
                                    } else {
                                      jjtree.popNode();
                                    }
                                    if (jjte003 instanceof RuntimeException) {
                                      {if (true) throw (RuntimeException)jjte003;}
                                    }
                                    if (jjte003 instanceof ParseException) {
                                      {if (true) throw (ParseException)jjte003;}
                                    }
                                    {if (true) throw (Error)jjte003;}
        } finally {
                                    if (jjtc003) {
                                      jjtree.closeNodeScope(jjtn003,  2);
                                    }
        }
      } else if (jj_2_32(2)) {
        jj_consume_token(IDENTIFIER);
        jj_consume_token(37);
        Expression();
                                      SimpleNode jjtn004 = new SimpleNode(JJTIDENTIFIER);
                                      boolean jjtc004 = true;
                                      jjtree.openNodeScope(jjtn004);
        try {
          jj_consume_token(38);
        } finally {
                                      if (jjtc004) {
                                        jjtree.closeNodeScope(jjtn004,  1);
                                      }
        }
        jj_consume_token(39);
        Expression();
                                                                          SimpleNode jjtn005 = new SimpleNode(JJTASSIGN);
                                                                          boolean jjtc005 = true;
                                                                          jjtree.openNodeScope(jjtn005);
        try {
          jj_consume_token(34);
        } finally {
                                                                          if (jjtc005) {
                                                                            jjtree.closeNodeScope(jjtn005,  2);
                                                                          }
        }
      } else if (jj_2_33(2)) {
        SimpleNode jjtn006 = new SimpleNode(JJTIDENTIFIER);
        boolean jjtc006 = true;
        jjtree.openNodeScope(jjtn006);
        try {
          jj_consume_token(IDENTIFIER);
        } finally {
        if (jjtc006) {
          jjtree.closeNodeScope(jjtn006, true);
        }
        }
        jj_consume_token(39);
        Expression();
                                                  SimpleNode jjtn007 = new SimpleNode(JJTASSIGN);
                                                  boolean jjtc007 = true;
                                                  jjtree.openNodeScope(jjtn007);
        try {
          jj_consume_token(34);
        } finally {
                                                  if (jjtc007) {
                                                    jjtree.closeNodeScope(jjtn007,  2);
                                                  }
        }
      } else if (jj_2_34(2)) {
        Expression();
        jj_consume_token(34);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Expression() throws ParseException {
    if (jj_2_44(2)) {
      SimpleNode jjtn001 = new SimpleNode(JJTINT);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(INTEGER);
      } finally {
      if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
      }
      }
      if (jj_2_35(2)) {
                      SimpleNode jjtn002 = new SimpleNode(JJTGROUPCONDITION);
                      boolean jjtc002 = true;
                      jjtree.openNodeScope(jjtn002);
        try {
          Express();
        } catch (Throwable jjte002) {
                      if (jjtc002) {
                        jjtree.clearNodeScope(jjtn002);
                        jjtc002 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte002 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte002;}
                      }
                      if (jjte002 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte002;}
                      }
                      {if (true) throw (Error)jjte002;}
        } finally {
                      if (jjtc002) {
                        jjtree.closeNodeScope(jjtn002,  2);
                      }
        }
      } else {
        ;
      }
    } else if (jj_2_45(2)) {
        SimpleNode jjtn003 = new SimpleNode(JJTTRUE);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(TRUE);
      } finally {
        if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
      }
      if (jj_2_36(2)) {
                      SimpleNode jjtn004 = new SimpleNode(JJTGROUPCONDITION);
                      boolean jjtc004 = true;
                      jjtree.openNodeScope(jjtn004);
        try {
          Express();
        } catch (Throwable jjte004) {
                      if (jjtc004) {
                        jjtree.clearNodeScope(jjtn004);
                        jjtc004 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte004 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte004;}
                      }
                      if (jjte004 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte004;}
                      }
                      {if (true) throw (Error)jjte004;}
        } finally {
                      if (jjtc004) {
                        jjtree.closeNodeScope(jjtn004,  2);
                      }
        }
      } else {
        ;
      }
    } else if (jj_2_46(2)) {
        SimpleNode jjtn005 = new SimpleNode(JJTFALSE);
        boolean jjtc005 = true;
        jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(FALSE);
      } finally {
        if (jjtc005) {
          jjtree.closeNodeScope(jjtn005, true);
        }
      }
      if (jj_2_37(2)) {
                        SimpleNode jjtn006 = new SimpleNode(JJTGROUPCONDITION);
                        boolean jjtc006 = true;
                        jjtree.openNodeScope(jjtn006);
        try {
          Express();
        } catch (Throwable jjte006) {
                        if (jjtc006) {
                          jjtree.clearNodeScope(jjtn006);
                          jjtc006 = false;
                        } else {
                          jjtree.popNode();
                        }
                        if (jjte006 instanceof RuntimeException) {
                          {if (true) throw (RuntimeException)jjte006;}
                        }
                        if (jjte006 instanceof ParseException) {
                          {if (true) throw (ParseException)jjte006;}
                        }
                        {if (true) throw (Error)jjte006;}
        } finally {
                        if (jjtc006) {
                          jjtree.closeNodeScope(jjtn006,  2);
                        }
        }
      } else {
        ;
      }
    } else if (jj_2_47(2)) {
        SimpleNode jjtn007 = new SimpleNode(JJTIDENTIFIER);
        boolean jjtc007 = true;
        jjtree.openNodeScope(jjtn007);
      try {
        jj_consume_token(IDENTIFIER);
      } finally {
        if (jjtc007) {
          jjtree.closeNodeScope(jjtn007, true);
        }
      }
      if (jj_2_38(2)) {
                                  SimpleNode jjtn008 = new SimpleNode(JJTGROUPCONDITION);
                                  boolean jjtc008 = true;
                                  jjtree.openNodeScope(jjtn008);
        try {
          Express();
        } catch (Throwable jjte008) {
                                  if (jjtc008) {
                                    jjtree.clearNodeScope(jjtn008);
                                    jjtc008 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte008 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte008;}
                                  }
                                  if (jjte008 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte008;}
                                  }
                                  {if (true) throw (Error)jjte008;}
        } finally {
                                  if (jjtc008) {
                                    jjtree.closeNodeScope(jjtn008,  2);
                                  }
        }
      } else {
        ;
      }
    } else if (jj_2_48(2)) {
        SimpleNode jjtn009 = new SimpleNode(JJTTHIS);
        boolean jjtc009 = true;
        jjtree.openNodeScope(jjtn009);
      try {
        jj_consume_token(THIS);
      } finally {
        if (jjtc009) {
          jjtree.closeNodeScope(jjtn009, true);
        }
      }
      if (jj_2_39(2)) {
                      SimpleNode jjtn010 = new SimpleNode(JJTGROUPCONDITION);
                      boolean jjtc010 = true;
                      jjtree.openNodeScope(jjtn010);
        try {
          Express();
        } catch (Throwable jjte010) {
                      if (jjtc010) {
                        jjtree.clearNodeScope(jjtn010);
                        jjtc010 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte010 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte010;}
                      }
                      if (jjte010 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte010;}
                      }
                      {if (true) throw (Error)jjte010;}
        } finally {
                      if (jjtc010) {
                        jjtree.closeNodeScope(jjtn010,  2);
                      }
        }
      } else {
        ;
      }
    } else if (jj_2_49(2)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(37);
      Expression();
                                     SimpleNode jjtn011 = new SimpleNode(JJTARRAY);
                                     boolean jjtc011 = true;
                                     jjtree.openNodeScope(jjtn011);
      try {
        jj_consume_token(38);
      } finally {
                                     if (jjtc011) {
                                       jjtree.closeNodeScope(jjtn011,  1);
                                     }
      }
      if (jj_2_40(2)) {
                                                    SimpleNode jjtn012 = new SimpleNode(JJTGROUPCONDITION);
                                                    boolean jjtc012 = true;
                                                    jjtree.openNodeScope(jjtn012);
        try {
          Express();
        } catch (Throwable jjte012) {
                                                    if (jjtc012) {
                                                      jjtree.clearNodeScope(jjtn012);
                                                      jjtc012 = false;
                                                    } else {
                                                      jjtree.popNode();
                                                    }
                                                    if (jjte012 instanceof RuntimeException) {
                                                      {if (true) throw (RuntimeException)jjte012;}
                                                    }
                                                    if (jjte012 instanceof ParseException) {
                                                      {if (true) throw (ParseException)jjte012;}
                                                    }
                                                    {if (true) throw (Error)jjte012;}
        } finally {
                                                    if (jjtc012) {
                                                      jjtree.closeNodeScope(jjtn012,  2);
                                                    }
        }
      } else {
        ;
      }
    } else if (jj_2_50(2)) {
      jj_consume_token(NEW);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(31);
                               SimpleNode jjtn013 = new SimpleNode(JJTOBJECT);
                               boolean jjtc013 = true;
                               jjtree.openNodeScope(jjtn013);
      try {
        jj_consume_token(33);
      } finally {
                               if (jjtc013) {
                                 jjtree.closeNodeScope(jjtn013, true);
                               }
      }
      if (jj_2_41(2)) {
                                            SimpleNode jjtn014 = new SimpleNode(JJTGROUPCONDITION);
                                            boolean jjtc014 = true;
                                            jjtree.openNodeScope(jjtn014);
        try {
          Express();
        } catch (Throwable jjte014) {
                                            if (jjtc014) {
                                              jjtree.clearNodeScope(jjtn014);
                                              jjtc014 = false;
                                            } else {
                                              jjtree.popNode();
                                            }
                                            if (jjte014 instanceof RuntimeException) {
                                              {if (true) throw (RuntimeException)jjte014;}
                                            }
                                            if (jjte014 instanceof ParseException) {
                                              {if (true) throw (ParseException)jjte014;}
                                            }
                                            {if (true) throw (Error)jjte014;}
        } finally {
                                            if (jjtc014) {
                                              jjtree.closeNodeScope(jjtn014,  2);
                                            }
        }
      } else {
        ;
      }
    } else if (jj_2_51(2)) {
      jj_consume_token(40);
            SimpleNode jjtn015 = new SimpleNode(JJTNEG);
            boolean jjtc015 = true;
            jjtree.openNodeScope(jjtn015);
      try {
        Expression();
      } catch (Throwable jjte015) {
            if (jjtc015) {
              jjtree.clearNodeScope(jjtn015);
              jjtc015 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte015 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte015;}
            }
            if (jjte015 instanceof ParseException) {
              {if (true) throw (ParseException)jjte015;}
            }
            {if (true) throw (Error)jjte015;}
      } finally {
            if (jjtc015) {
              jjtree.closeNodeScope(jjtn015,  1);
            }
      }
      if (jj_2_42(2)) {
                                  SimpleNode jjtn016 = new SimpleNode(JJTGROUPCONDITION);
                                  boolean jjtc016 = true;
                                  jjtree.openNodeScope(jjtn016);
        try {
          Express();
        } catch (Throwable jjte016) {
                                  if (jjtc016) {
                                    jjtree.clearNodeScope(jjtn016);
                                    jjtc016 = false;
                                  } else {
                                    jjtree.popNode();
                                  }
                                  if (jjte016 instanceof RuntimeException) {
                                    {if (true) throw (RuntimeException)jjte016;}
                                  }
                                  if (jjte016 instanceof ParseException) {
                                    {if (true) throw (ParseException)jjte016;}
                                  }
                                  {if (true) throw (Error)jjte016;}
        } finally {
                                  if (jjtc016) {
                                    jjtree.closeNodeScope(jjtn016,  2);
                                  }
        }
      } else {
        ;
      }
    } else if (jj_2_52(2)) {
      jj_consume_token(31);
      Expression();
                         SimpleNode jjtn017 = new SimpleNode(JJTGROUP);
                         boolean jjtc017 = true;
                         jjtree.openNodeScope(jjtn017);
      try {
        jj_consume_token(33);
      } finally {
                         if (jjtc017) {
                           jjtree.closeNodeScope(jjtn017,  1);
                         }
      }
      if (jj_2_43(2)) {
                                        SimpleNode jjtn018 = new SimpleNode(JJTGROUPCONDITION);
                                        boolean jjtc018 = true;
                                        jjtree.openNodeScope(jjtn018);
        try {
          Express();
        } catch (Throwable jjte018) {
                                        if (jjtc018) {
                                          jjtree.clearNodeScope(jjtn018);
                                          jjtc018 = false;
                                        } else {
                                          jjtree.popNode();
                                        }
                                        if (jjte018 instanceof RuntimeException) {
                                          {if (true) throw (RuntimeException)jjte018;}
                                        }
                                        if (jjte018 instanceof ParseException) {
                                          {if (true) throw (ParseException)jjte018;}
                                        }
                                        {if (true) throw (Error)jjte018;}
        } finally {
                                        if (jjtc018) {
                                          jjtree.closeNodeScope(jjtn018,  2);
                                        }
        }
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
